# zotero-client

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  zotero.py
.github/workflows/: integration-test.yml
docs/: API.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_PLAN.md
examples/: basic_usage.py
examples/jupyter/: zotero_analysis.ipynb
tests/: __init__.py  test_client.py
tests/test_api/: test_client_collections.py  test_client_export.py  test_client_items.py  test_client_tags.py  test_integration.py
tests/test_cli/: test_configure.py  test_export.py  test_items.py
tests/test_models/: test_collection.py  test_item.py
tests/test_web/: conftest.py  test_collections.py  test_items.py  test_tags.py
zotero_client/: __init__.py
zotero_client/api/: __init__.py  client.py
zotero_client/cli/: __init__.py  main.py
zotero_client/models/: collection.py  item.py  tag.py
zotero_client/utils/: __init__.py  config.py
zotero_client/web/: __init__.py
zotero_client/web/routes/: collections.py  items.py  tags.py
zotero_client/web/templates/: base.html  error.html
zotero_client/web/templates/collections/: list.html
zotero_client/web/templates/items/: detail.html  list.html
zotero_client/web/templates/tags/: list.html
